# self-certifi

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: index.rst  quickstart.rst
self_certifi/: __init__.py
tests/: conftest.py  test_loading.py
