# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = self-certifi
version = 0.1.0
description = Create a CA-bundle based on certifi and self-signed certificates, for usage with requests.
long_description = file: README.rst
url = https://github.com/maykinmedia/self-certifi
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords =
    requests
    certifi
    self-signed
    certificates
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    certifi
tests_require =
    pytest

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    pytest
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
known_first_party=self_certifi
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc
